fix: install build-tools 33.0.2