@@ -12,8 +12,7 @@ ENV GRADLE_HOME="/opt/gradle/gradle-7.6.4"
 ENV PATH="$PATH:$GRADLE_HOME/bin"
 
 # Setup Cordova
-ENV JAVA_OPTS="-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee"
-RUN $ANDROID_SDK_ROOT/tools/bin/sdkmanager --install "build-tools;33.0.2"
+RUN su android -c '/opt/tools/android-accept-licenses.sh "sdkmanager ${SDKMNGR_OPTS} \"build-tools;33.0.2\""'
 RUN npm i -g cordova@12.0.0
 
 COPY entrypoint.sh /usr/src/entrypoint.sh
